--- a/cs.css
+++ b/cs.css
@@ -37,7 +37,20 @@ div {
     font-weight: 600;
     line-height: 1.2;
 }
-
+#help {
+    position: absolute;
+    left: 960px;
+    top: 50px;
+    width: 225px;
+    padding: 5px;
+    background: #f0f0f0;
+}
+p#opa {
+    color: red;
+    border: 1px solid #666;
+    background: #eee;
+    padding: 5px;
+}
 h2 {
     background-color: RGB(249, 201, 16);
 }
