--- a/cs.css
+++ b/cs.css
@@ -89,3 +89,24 @@ a {
     color: navy;
 
 }
+b+i {
+    color: #d693ff;
+}
+h2.sic {
+    font-size: 140%;
+    color: maroon;
+    font-weight: normal;
+    margin-left: 30px;
+}
+ h2.sic + p.lev {
+    background: #ddd;
+    margin-left: 30px;
+    margin-top: 0.5em;
+    padding: 7px;
+}
+H1 + H2 {
+    margin-top: -10px;
+}
+H2 + P {
+    margin-top: -1em;
+}
